--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<h1>Cilco de vida de Angular</h1>
+
+<h1>Ciclo de vida de Angular</h1>
 <hr>
+
+<button (click)="mostrar = !mostrar">
+    {{ mostrar ? 'Ocultar' : 'Mostrar' }}
+</button>
+
+<app-pagina1 *ngIf="mostrar"></app-pagina1>
